--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    background-image: url("https://img.freepik.com/free-photo/abstract-luxury-plain-blur-grey-black-gradient-used-as-background-studio-wall-display-your-products_1258-71068.jpg?t=st=1714527521~exp=1714531121~hmac=e053868b1162e44c8127535841802ca6b90b24e718cba95f4b8308a5d695c2ce&w=1800");
+    background-image: url("https://t4.ftcdn.net/jpg/01/29/27/73/360_F_129277373_HOQaWFD8bupLUvqF6NWg4dkSkR80HPzO.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
